# CSE291_Final

./: .gitignore  README.md  RESULTS_ANALYSIS.md  plot_combined.py  plot_results.py  pyproject.toml  requirements.txt  results_hard-hybrid_spread.json  results_mock_spread.json  run_experiment.py  run_liar_ratio_comparison.py  run_tritonai_experiment.py
deceptive_text_env/: __init__.py  config.py  main.py  prompts.py  types.py
deceptive_text_env/agents/: __init__.py  base.py
deceptive_text_env/evaluation/: __init__.py  metrics.py  runner.py
deceptive_text_env/llm/: __init__.py  client.py
deceptive_text_env/memory/: __init__.py  structured.py
deceptive_text_env/npcs/: __init__.py  base.py
deceptive_text_env/world/: __init__.py  environment.py  judge.py  verifier.py
