[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deceptive-text-env"
version = "0.1.0"
description = "LLM-first framework for deceptive NPC studies in text-based environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["deceptive_text_env*"]
